apep_0088/v1/REPLICATION.md
# Replication Package: apep_0110

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `bin_means.rds`
- `borders_sf.rds`
- `bw_sensitivity.rds`
- `covariate_balance.rds`
- `crashes_analysis.rds`
- `crashes_prohib_analysis.rds`
- `crashes_sf.rds`
- `dispensaries_sf.rds`
- `dist_bin_summary.rds`
- `distance_results.rds`
- `kernel_sensitivity.rds`
- `main_results.rds`
- `placebo_cutoffs.rds`
- `prohib_state_summary.rds`
- `states_sf.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `05_figures_simple.R`
- `05_figures_v2.R`
- `06_tables.R`
- `06_tables_v2.R`
- `07_distance_analysis.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
