apep_0088/v2/REPLICATION.md
# Replication Package: apep_0088

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `analysis_data.rds`
- `border_distances_corrected.rds`
- `border_pair_data.rds`
- `border_pairs_verified.rds`
- `canton_treatment.rds`
- `canton_treatment_verified.rds`
- `didisc_results.rds`
- `gemeinde_boundaries.rds`
- `gemeinde_spatial.rds`
- `key_results.rds`
- `panel_data.rds`
- `placebo_results_corrected.rds`
- `placebo_votes_raw.rds`
- `rd_results.rds`
- `rd_results_full.rds`
- `rdd_results_corrected.rds`
- `rdd_sample_corrected.rds`
- `treatment_verification.csv`
- `voting_data.rds`
- `voting_sf.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `00b_verify_treatment.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `06_tables.R`
- `07_expanded_analysis.R`
- `08_revision_fixes.R`
- `09_fix_rdd_sample.R`
- `10_placebo_corrected.R`
- `11_didisc_analysis.R`
- `12_corrected_rdd_figures.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
